--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "touristappid",
+	"appid": "wx0e25fdfc6f2e7a40",
 	"projectname": "miniApp",
 	"condition": {
 		"search": {
